--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -64,15 +64,7 @@
             android:layout_weight="1"
             android:background="@drawable/border"
             android:gravity="center"
-            android:text="message"
-            android:textColor="@color/white" />
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@drawable/border"
-            android:gravity="center"
+            android:onClick="sendto"
             android:text="send"
             android:textColor="@color/white" />
 
