--- a/app/src/main/res/layout/send.xml
+++ b/app/src/main/res/layout/send.xml
@@ -2,6 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginBottom="50dp"
+    android:layout_marginTop="50dp"
     android:orientation="vertical">
 
     <EditText
@@ -42,4 +44,10 @@
         android:gravity="top|start"
         android:inputType="textMultiLine|textCapSentences"
         android:hint="input the title" />
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1.5"
+        android:text="send"
+        android:onClick="send"/>
 </LinearLayout>
